--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,9 +7,12 @@
   padding: 4rem 0;
   flex: 1;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  gap: 1rem;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .footer {
