added catholic filtering

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -85,3 +85,16 @@ h6 {
 #__next {
   isolation: isolate;
 }
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-Manrope);
+}
