more style updates

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,6 +30,7 @@ body {
   height: 100%;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  scroll-behavior: smooth;
 }
 
 /* A elements that don't have a class get default styles */
