--- a/components/saint/Books/styles.module.scss
+++ b/components/saint/Books/styles.module.scss
@@ -2,13 +2,11 @@
   display: flex;
   flex-direction: row;
   gap: 30px;
-  width: calc(50% - 1rem);
+  width: calc(50% - 2rem);
   min-width: 450px;
   color: inherit;
   text-decoration: none;
   align-items: center;
-  border: 1px solid #ccad0048;
-  padding: 20px 30px;
   border-radius: 10px;
 
   .image {
@@ -32,6 +30,7 @@
     justify-content: flex-start;
     height: 100%;
     margin-top: 20px;
+    padding-right: 30px;
 
     .bookName {
       font-size: 20px;
@@ -39,18 +38,17 @@
       line-height: 1.2;
       width: 100%;
       color: #000;
-      margin-bottom: 10px;
     }
 
     .bookAuthor {
       font-size: 14px;
-      color: #484848;
+      color: #9b9b9b;
       margin-bottom: 10px;
     }
 
     .bookDescription {
       font-size: 14px;
-      line-height: 1.2;
+      line-height: 1.25;
       color: #737373;
       display: -webkit-box;
       -webkit-line-clamp: 5;
@@ -87,7 +85,7 @@
 
 .books {
   padding-top: 1rem;
-  margin-bottom: 2rem;
+  margin-bottom: 75px;
 
   h3 {
     margin-bottom: 0.5rem;
@@ -95,7 +93,7 @@
 
   .booksContainer {
     display: flex;
-    gap: 20px;
+    gap: 30px;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: flex-start;
@@ -110,8 +108,13 @@
     gap: 40px;
   }
 
+  .ctaBtn {
+    width: max-content;
+  }
+
   .book {
     flex-direction: column;
+    align-items: flex-start;
     padding: 0;
     width: 100%;
     min-width: unset;
