--- a/components/saint/Summary/styles.module.scss
+++ b/components/saint/Summary/styles.module.scss
@@ -2,35 +2,29 @@
   font-size: 16px;
   color: #333;
   line-height: 1.5;
-  margin-top: 40px;
+  margin-top: 30px;
   position: relative;
-  margin-bottom: 50px;
-  max-width: 800px;
-
-  &:before {
-    content: '';
-    position: absolute;
-    bottom: -50px;
-    width: 75%;
-    border-bottom: 1px solid rgb(229, 229, 229);
-  }
+  width: 100%;
 
   ul {
     list-style-type: square;
     color: var(--gold);
-    margin-left: 0;
+    margin-left: -20px;
 
     li {
       margin-bottom: 10px;
       margin-left: 0;
+      max-width: 800px;
 
       p {
-        color: #5d5d5d;
-        font-weight: 400;
+        color: #222;
+        font-size: 16px;
+        font-weight: 450;
 
         strong {
-          color: #000;
-          font-weight: 500;
+          color: #888;
+          font-weight: 450;
+          text-decoration: underline;
         }
       }
     }
