--- a/pages/saints/[slug]/styles.module.scss
+++ b/pages/saints/[slug]/styles.module.scss
@@ -19,6 +19,8 @@
       display: flex;
       margin-top: 30px;
       gap: 40px;
+      padding-bottom: 40px;
+      border-bottom: 1px solid #ccad004d;
 
       .heroText {
         margin-top: 150px;
@@ -50,13 +52,6 @@
       @include breakpoint(laptop) {
         width: calc(100% - 300px);
       }
-
-      .bentoSection {
-        display: flex;
-        gap: 1rem;
-        margin-bottom: 2rem;
-        flex-wrap: wrap;
-      }
     }
   }
 }
@@ -83,6 +78,8 @@
 
       .text {
         margin-top: 20px;
+        border-left: 1px solid rgb(228, 227, 227);
+        padding-left: 30px;
 
         h3 {
           margin: 30px 0 10px 0;
