--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,10 @@ blockquote,
 dl,
 dd {
   margin: 0;
+  text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  font-synthesis: weight;
 }
 
 /* Set core root defaults */
