--- a/components/page/SMButtons/styles.module.scss
+++ b/components/page/SMButtons/styles.module.scss
@@ -1,19 +1,14 @@
-import styled from 'styled-components'
-
-export const SocialMediaButtons = styled.div`
+.socialMediaButtons {
   display: flex;
   gap: 10px;
   margin-left: 20px;
 
   .button {
-
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 8px;
     transition: all 0.2s ease-in-out;
     cursor: pointer;
-
-
   }
-`
+}
