--- a/components/saint/BentoSection/styles.module.scss
+++ b/components/saint/BentoSection/styles.module.scss
@@ -1,14 +1,13 @@
 @use 'sass:color';
+@import './../../../styles/breakpoints.scss';
 
 .bentoSection {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 6px 16px;
   font-size: 18px;
   font-weight: 400;
-  border-radius: 15px;
-
+  border-radius: 10px;
   color: #ffffff;
   margin-bottom: 30px;
   position: relative;
@@ -17,68 +16,51 @@
   cursor: pointer;
   flex: 1;
 
-  .header {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: #eaeaea;
-    height: 40px;
-    color: #333;
-    font-size: 14px;
-
-    svg {
-      margin-right: 30px;
-    }
+  @include breakpoint(tablet) {
+    flex-direction: row;
+    border-radius: 15px;
   }
 
-  .content {
+  .toc {
+    background: linear-gradient(
+      246deg,
+      rgb(117 2 15) 0%,
+      rgb(0, 0, 0) 100%
+    );
     display: flex;
+    align-items: flex-start;
+    font-size: 13px;
+    flex-direction: column;
+    flex-wrap: wrap;
+    color: #ffcaca;
+    align-content: space-between;
+    line-height: 1.4;
+    max-height: max-content;
+    width: 100%;
+    font-weight: 500;
 
-    .chapters {
-      color: #8f8d9c;
-      font-weight: 700;
-      margin-bottom: 15px;
-      font-size: 15px;
-      text-transform: capitalize;
+    @include breakpoint(tablet) {
+      width: 35%;
     }
 
     .list {
+      padding: 20px;
       flex: 1;
-    }
 
-    .item {
-      margin-bottom: 10px;
-    }
+      @include breakpoint(tablet) {
+        padding: 20px 30px;
+      }
 
-    .toc {
-      background: linear-gradient(
-        246deg,
-        rgb(117 2 15) 0%,
-        rgb(0, 0, 0) 100%
-      );
-      padding: 30px 40px;
-      display: flex;
-      align-items: flex-start;
-      font-size: 14px;
-      flex-direction: column;
-      flex-wrap: wrap;
-      color: #ffcaca;
-      align-content: space-between;
-      line-height: 1.4;
-      max-height: max-content;
-      border-right: 1px solid #eaeaea;
-      width: 33%;
-      min-width: 400px;
-      font-weight: 500;
+      @include breakpoint(laptop) {
+        padding: 30px 40px;
+      }
 
-      .image {
-        position: relative;
-        height: 75px;
-        width: 75px;
-        border-radius: 50%;
-        overflow: hidden;
-        margin-top: -50px;
-        margin-bottom: 10px;
+      .item {
+        margin-bottom: 5px;
+
+        @include breakpoint(tablet) {
+          margin-bottom: 10px;
+        }
       }
 
       .dash {
@@ -87,12 +69,32 @@
         margin-right: 5px;
       }
     }
+  }
 
-    .text {
-      width: 66%;
-      padding: 30px 40px;
-      display: flex;
-      flex-direction: column;
+  .text {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
+    @include breakpoint(tablet) {
+      width: 65%;
+    }
+
+    &.full {
+      width: 100%;
+    }
+
+    .previewContainer {
+      flex: 1;
+      padding: 20px;
+
+      @include breakpoint(tablet) {
+        padding: 20px 30px;
+      }
+
+      @include breakpoint(laptop) {
+        padding: 30px 40px;
+      }
 
       .preview {
         width: 100%;
@@ -103,35 +105,65 @@
         flex: 1;
 
         h2 {
-          font-size: 15px;
+          font-size: 16px;
           margin-bottom: 15px;
-          color: #a7a7a7;
+          color: #939292;
           font-weight: 700;
+          display: none;
         }
 
         p {
-          font-size: 14px;
-          margin-bottom: 10px;
+          font-size: 15px;
+          margin-bottom: 15px;
           color: #565656;
+        }
+
+        strong {
+          color: #605f5f;
+          font-weight: 600;
         }
       }
     }
   }
 
-  .expand {
-    flex: 1;
-  }
+  .header {
+    background-color: var(--violet);
+    padding: 0 20px;
+    font-size: 14px;
+    width: 100%;
+    height: 40px;
+    display: flex;
+    color: var(--gold);
+    align-items: center;
+    letter-spacing: 0.25px;
+    font-weight: 600;
 
-  .wordCount {
-    font-size: 12px;
-    color: #8f8d9c;
+    @include breakpoint(tablet) {
+      padding: 0 30px;
+    }
+
+    @include breakpoint(laptop) {
+      padding: 0 40px;
+    }
   }
 
   .footer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 30px;
+    padding: 0 20px 20px 20px;
+
+    @include breakpoint(tablet) {
+      padding: 0 30px 20px 30px;
+    }
+
+    @include breakpoint(laptop) {
+      padding: 0 40px 20px 40px;
+    }
+  }
+
+  .wordCount {
+    font-size: 14px;
+    color: #8f8d9c;
+    margin-left: 5px;
+    line-height: 1;
   }
 
   button {
