--- a/components/saint/Books/styles.module.scss
+++ b/components/saint/Books/styles.module.scss
@@ -1,13 +1,20 @@
+@import './../../../styles/breakpoints.scss';
+
 .book {
   display: flex;
   flex-direction: row;
-  gap: 30px;
-  width: calc(50% - 2rem);
-  min-width: 450px;
+  gap: 15px;
+  width: 100%;
   color: inherit;
   text-decoration: none;
   align-items: center;
   border-radius: 10px;
+
+  @include breakpoint(tablet) {
+    min-width: 450px;
+    width: calc(50% - 2rem);
+    gap: 20px;
+  }
 
   .image {
     height: 225px;
@@ -29,31 +36,46 @@
     flex-direction: column;
     justify-content: flex-start;
     height: 100%;
-    margin-top: 20px;
-    padding-right: 30px;
+
+    @include breakpoint(tablet) {
+      padding-right: 30px;
+    }
 
     .bookName {
-      font-size: 20px;
+      font-size: 16px;
       font-weight: 600;
       line-height: 1.2;
       width: 100%;
       color: #000;
+
+      @include breakpoint(tablet) {
+        font-size: 20px;
+      }
     }
 
     .bookAuthor {
-      font-size: 14px;
+      font-size: 13px;
       color: #9b9b9b;
       margin-bottom: 10px;
+
+      @include breakpoint(tablet) {
+        font-size: 14px;
+      }
     }
 
     .bookDescription {
-      font-size: 14px;
+      font-size: 13px;
       line-height: 1.25;
       color: #737373;
       display: -webkit-box;
-      -webkit-line-clamp: 5;
+      -webkit-line-clamp: 8;
       -webkit-box-orient: vertical;
       overflow: hidden;
+
+      @include breakpoint(tablet) {
+        font-size: 14px;
+        -webkit-line-clamp: 5;
+      }
     }
 
     .bookLink {
@@ -65,14 +87,21 @@
       background-color: transparent;
       color: var(--violet);
       border: 1px solid var(--gold);
-      border-radius: 15px;
-      padding: 5px 20px;
+      font-size: 12px;
+      border-radius: 10px;
+      padding: 3px 15px;
       display: block;
       transition: all 0.2s ease-in-out;
       box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
       cursor: pointer;
       margin-top: 20px;
       width: fit-content;
+
+      @include breakpoint(tablet) {
+        font-size: 14px;
+        padding: 5px 20px;
+        border-radius: 15px;
+      }
 
       &:hover {
         border: 1px solid transparent;
@@ -84,8 +113,12 @@
 }
 
 .books {
-  padding-top: 1rem;
-  margin-bottom: 75px;
+  padding-top: 2rem;
+  margin-top: 3rem;
+  margin-bottom: 30px;
+  padding-bottom: 3rem;
+  border-bottom: 1px solid #ccad004d;
+  border-top: 1px solid #ccad004d;
 
   h3 {
     margin-bottom: 0.5rem;
