--- a/components/saint/SimilarSaints/styles.module.scss
+++ b/components/saint/SimilarSaints/styles.module.scss
@@ -1,52 +1,48 @@
-import styled from 'styled-components'
-import { colors } from '../../../styles/colors'
+@import './../../../styles/breakpoints.scss';
 
-export const RelatedPerson = styled.div`
+.similarSaint {
   margin-bottom: 25px;
-  width: calc(50% - 15px);
+  width: 100%;
   border-radius: 10px;
+
+  @include breakpoint(laptop) {
+    width: calc(50% - 15px);
+  }
 
   a {
     text-decoration: none;
     display: flex;
+    gap: 20px;
   }
 
-  .image-global {
-    height: 225px;
-    width: 150px;
-    margin-right: 15px;
-    min-width: 150px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
-      rgba(0, 0, 0, 0.22) 0px 10px 10px;
-
-    img {
-      min-height: 100%;
-      min-width: 100%;
-      object-fit: cover;
-      border-radius: 5px;
-    }
-  }
-
-  .person-info {
+  .personInfo {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding: 15px 10px;
     position: relative;
     overflow: hidden;
 
     .name {
-      font-size: 18px;
+      font-size: 16px;
       font-weight: 700;
       line-height: 1.1;
       color: #2d2d2d;
+
+      @include breakpoint(tablet) {
+        font-size: 18px;
+      }
     }
 
     .dates {
-      font-size: 14px;
+      font-size: 13px;
       color: #9b9b9b;
       font-weight: 400;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
+
+      @include breakpoint(tablet) {
+        margin-bottom: 10px;
+        font-size: 14px;
+      }
     }
 
     .tags {
@@ -55,27 +51,39 @@ export const RelatedPerson = styled.div`
       gap: 4px;
 
       .tag {
-        padding: 2px 12px;
-        font-size: 12px;
+        padding: 0px 10px;
+        font-size: 10px;
         letter-spacing: 0.5px;
-        border-radius: 4px;
+        border-radius: 3px;
         border: 1px solid #b6b6b6;
         color: #737373;
         min-width: fit-content;
+
+        @include breakpoint(tablet) {
+          padding: 2px 12px;
+          font-size: 12px;
+          border-radius: 4px;
+        }
       }
     }
 
     .summary {
       color: #737373;
-      font-size: 14px;
+      font-size: 12px;
       line-height: 1.25;
-      margin-top: 15px;
+      margin-top: 10px;
       position: relative;
       overflow: hidden;
       display: -webkit-box;
-      -webkit-line-clamp: 6;
+      -webkit-line-clamp: 8;
       -webkit-box-orient: vertical;
       overflow: hidden;
+
+      @include breakpoint(tablet) {
+        font-size: 14px;
+        margin-top: 15px;
+        -webkit-line-clamp: 6;
+      }
 
       ul {
         list-style: none;
@@ -89,17 +97,17 @@ export const RelatedPerson = styled.div`
       }
     }
   }
-`
+}
 
-export const RelatedPeople = styled.div`
+.similarSaints {
   h3 {
     margin-bottom: 0.5rem;
   }
 
-  .similar-saints-container {
+  .similarSaintsContainer {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
   }
-`
+}
