--- a/pages/saints/[slug]/styles.module.scss
+++ b/pages/saints/[slug]/styles.module.scss
@@ -5,7 +5,11 @@
   color: #212121;
   display: flex;
   flex-direction: column;
-  gap: 40px;
+  gap: 30px;
+
+  @include breakpoint(tablet) {
+    gap: 40px;
+  }
 
   .hero {
     width: 100vw;
@@ -18,12 +22,21 @@
       width: 90%;
       display: flex;
       margin-top: 30px;
-      gap: 40px;
-      padding-bottom: 40px;
+      gap: 20px;
+      padding-bottom: 20px;
       border-bottom: 1px solid #ccad004d;
+      flex-direction: column;
+
+      @include breakpoint(tablet) {
+        flex-direction: row;
+        padding-bottom: 40px;
+        gap: 40px;
+      }
 
       .heroText {
-        margin-top: 150px;
+        @include breakpoint(tablet) {
+          margin-top: 150px;
+        }
       }
     }
   }
@@ -46,10 +59,9 @@
     }
 
     .main {
+      width: 100%;
+
       @include breakpoint(tablet) {
-        width: calc(100% - 300px);
-      }
-      @include breakpoint(laptop) {
         width: calc(100% - 300px);
       }
     }
@@ -65,12 +77,34 @@
 
   .content {
     display: flex;
-    gap: 100px;
+    flex-direction: column;
     width: 100%;
 
+    @include breakpoint(tablet) {
+      flex-direction: row;
+      gap: 40px;
+    }
+
+    @include breakpoint(laptop) {
+      gap: 100px;
+    }
+
+    .leftRail {
+      @include breakpoint(tablet) {
+        width: 200px;
+      }
+
+      @include breakpoint(laptop) {
+        width: auto;
+      }
+    }
+
     .main {
-      margin-top: 150px;
-      max-width: calc(100% - 300px);
+      margin-top: 25px;
+
+      @include breakpoint(tablet) {
+        margin-top: 150px;
+      }
 
       @include breakpoint(laptop) {
         max-width: calc(100% - 500px);
@@ -85,8 +119,11 @@
 
       .text {
         margin-top: 20px;
-        border-left: 1px solid rgb(228, 227, 227);
-        padding-left: 30px;
+
+        @include breakpoint(tablet) {
+          padding-left: 30px;
+          border-left: 1px solid rgb(228, 227, 227);
+        }
 
         h3 {
           margin: 30px 0 10px 0;
@@ -98,6 +135,10 @@
           color: #333;
         }
 
+        strong {
+          color: #999;
+        }
+
         p {
           font-size: 15px;
           line-height: 1.5;
@@ -106,7 +147,12 @@
 
         img {
           float: left;
-          margin-right: 30px;
+          margin-right: 20px;
+          max-width: 50%;
+
+          @include breakpoint(laptop) {
+            margin-right: 30px;
+          }
         }
       }
     }
