--- a/components/page/Footer/styles.module.scss
+++ b/components/page/Footer/styles.module.scss
@@ -2,14 +2,25 @@
 
 .footer {
   background-color: #343434;
-  height: 100px;
+  height: 80px;
   color: #fff;
   width: 100%;
   display: flex;
+  transition: bottom 0.3s ease-out;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 
   @include breakpoint(laptop) {
-    height: 100px;
+    height: 60px;
     margin-top: 150px;
+  }
+
+  &.animated {
+    position: fixed;
+    bottom: -100px;
+  }
+
+  &.inView {
+    bottom: 0;
   }
 
   .content {
@@ -17,11 +28,7 @@
     max-width: 1450px;
     margin: 20px auto;
     display: flex;
-    align-items: flex-end;
-
-    @include breakpoint(tablet) {
-      align-items: center;
-    }
+    align-items: center;
 
     .left {
       justify-content: flex-start;
@@ -49,10 +56,12 @@
     a {
       color: #fff;
       text-decoration: none;
-      margin: 0 20px;
-      font-size: 14px;
+      font-size: 16px;
       transition: all 0.1s ease-in-out;
       font-weight: 700;
+      display: flex;
+      align-items: center;
+      gap: 10px;
 
       @include breakpoint(tablet) {
         margin: 0 20px;
