--- a/components/home/Toggle/styles.module.scss
+++ b/components/home/Toggle/styles.module.scss
@@ -1,8 +1,8 @@
-import styled from 'styled-components'
 
-export const Toggle = styled.div`
+
+.sortToggle {
   position: absolute;
-  bottom: -10px;
+  bottom: -50px;
   left: calc((100% - 230px) / 2);
 
   .selected {
@@ -56,4 +56,4 @@ export const Toggle = styled.div`
       }
     }
   }
-`
+};
