--- a/pages/styles.module.scss
+++ b/pages/styles.module.scss
@@ -9,6 +9,7 @@
   justify-content: space-between;
   margin-top: 30px;
   margin-bottom: 30px;
+  flex: 1;
 
   @include breakpoint(tablet) {
     flex-direction: row;
