--- a/components/books/Slide/styles.module.scss
+++ b/components/books/Slide/styles.module.scss
@@ -1,14 +1,14 @@
-import styled from 'styled-components'
-import { variables } from '../../../styles/colors'
-import { device } from '../../../styles/devices'
+// import styled from 'styled-components'
+// import { variables } from '../../../styles/colors'
+// import { device } from '../../../styles/devices'
 
-export const Slide = styled.div`
+.Slide {
   width: 750px;
   min-width: 750px;
   position: relative;
 
   &:nth-child(3n + 1) .content {
-    background-color: ${variables.slideBackground1};
+   // background-color: ${variables.slideBackground1};
 
     .description::after {
       background: linear-gradient(
@@ -20,26 +20,26 @@ export const Slide = styled.div`
   }
 
   &:nth-child(3n + 2) .content {
-    background-color: ${variables.slideBackground2};
+   // background-color: ${variables.slideBackground2};
 
     .description::after {
-      background: linear-gradient(
-        to bottom,
-        rgba(255, 255, 255, 0),
-        ${variables.slideBackground2}
-      );
+      // background: linear-gradient(
+      //   to bottom,
+      //   rgba(255, 255, 255, 0),
+      //  ${variables.slideBackground2}
+      // );
     }
   }
 
   &:nth-child(3n + 3) .content {
-    background-color: ${variables.slideBackground3};
+  //  background-color: ${variables.slideBackground3};
 
     .description::after {
-      background: linear-gradient(
-        to bottom,
-        rgba(255, 255, 255, 0),
-        ${variables.slideBackground3}
-      );
+      // background: linear-gradient(
+      //   to bottom,
+      //   rgba(255, 255, 255, 0),
+      //   ${variables.slideBackground3}
+      // );
     }
   }
 
@@ -53,7 +53,7 @@ export const Slide = styled.div`
     width: min-content;
     margin: 0 auto;
 
-    @media ${device.tablet} {
+   @include breakpoint(tablet) {
       position: absolute;
       top: 35px;
       left: 40px;
@@ -62,7 +62,7 @@ export const Slide = styled.div`
     img {
       max-width: 100px;
 
-      @media ${device.tablet} {
+     @include breakpoint(tablet) {
         max-width: 200px;
       }
     }
@@ -92,7 +92,7 @@ export const Slide = styled.div`
     flex-direction: column;
     position: relative;
 
-    @media ${device.tablet} {
+  @include breakpoint(tablet) {
       flex-direction: row;
       padding: 30px;
       gap: 40px;
@@ -100,7 +100,7 @@ export const Slide = styled.div`
     }
 
     .info {
-      @media ${device.tablet} {
+    @include breakpoint(tablet) {
         width: 65%;
         display: flex;
         flex-direction: column;
@@ -118,7 +118,7 @@ export const Slide = styled.div`
       text-align: center;
       color: #fff;
 
-      @media ${device.tablet} {
+    @include breakpoint(tablet) {
         text-align: left;
       }
     }
@@ -131,7 +131,7 @@ export const Slide = styled.div`
       text-align: center;
       color: #fff;
 
-      @media ${device.tablet} {
+     @include breakpoint(tablet) {
         text-align: left;
       }
     }
@@ -158,4 +158,4 @@ export const Slide = styled.div`
       }
     }
   }
-`
+};
