--- a/components/global/BigLink/styles.module.scss
+++ b/components/global/BigLink/styles.module.scss
@@ -1,8 +1,6 @@
-import styled from 'styled-components'
-
-export const BigLink = styled.div`
+.bigLink {
   padding: 50px 100px;
   background-color: darkblue;
   border-radius: 15px;
   color: #fff;
-`
+}
