--- a/components/books/BookSummary/styles.module.scss
+++ b/components/books/BookSummary/styles.module.scss
@@ -1,8 +1,6 @@
-import styled from 'styled-components'
-import { colors } from '../../../styles/colors'
-import { device } from '../../../styles/devices'
+@import './../../../styles/breakpoints.scss';
 
-export const BookSummary = styled.div`
+.bookSummary {
   width: 100%;
   border: 1px solid transparent;
 
@@ -13,13 +11,13 @@ export const BookSummary = styled.div`
     width: 90%;
     margin: 30px auto;
 
-    @media ${device.tablet} {
+    @include breakpoint(tablet) {
       margin: 0 0 0 30px;
       width: 90%;
     }
 
     &.col-1 {
-      @media ${device.tablet} {
+      @include breakpoint(tablet) {
         margin-right: 50px;
         position: relative;
         top: -70px;
@@ -57,7 +55,7 @@ export const BookSummary = styled.div`
     flex-direction: column;
     position: relative;
 
-    @media ${device.tablet} {
+    @include breakpoint(tablet) {
       margin-top: 50px;
       flex-direction: row;
       padding: 40px 50px 20px 20px;
@@ -72,7 +70,7 @@ export const BookSummary = styled.div`
       margin-bottom: 5px;
       text-align: center;
 
-      @media ${device.tablet} {
+      @include breakpoint(tablet) {
         text-align: left;
       }
     }
@@ -84,7 +82,7 @@ export const BookSummary = styled.div`
       margin-bottom: 10px;
       text-align: center;
 
-      @media ${device.tablet} {
+      @include breakpoint(tablet) {
         text-align: left;
       }
     }
@@ -120,4 +118,4 @@ export const BookSummary = styled.div`
       }
     }
   }
-`
+}
