--- a/components/page/Search/styles.module.scss
+++ b/components/page/Search/styles.module.scss
@@ -1,11 +1,12 @@
-import styled from 'styled-components'
-import { device } from '../../../styles/devices'
+// import styled from 'styled-components'
+// import { device } from '../../../styles/devices'
+@import './../../../styles/breakpoints.scss';
 
-export const Search = styled.div`
+.search {
   position: relative;
   display: none;
 
-  @media ${device.tablet} {
+  @include breakpoint(laptop) {
     display: block;
   }
 
@@ -21,7 +22,7 @@ export const Search = styled.div`
     transition: width 0.3s ease-in-out;
   }
 
-  .input-wrapper {
+  .inputWrapper {
     position: relative;
   }
 
@@ -32,7 +33,7 @@ export const Search = styled.div`
     font-size: 15px; /* Adjust based on your design preference */
   }
 
-  .dropdown-content {
+  .dropdownContent {
     display: block;
     position: absolute;
     background-color: white;
@@ -51,7 +52,7 @@ export const Search = styled.div`
     }
   }
 
-  .dropdown-content .result {
+  .dropdownContent .result {
     color: black;
     text-decoration: none;
     display: block;
@@ -113,4 +114,4 @@ export const Search = styled.div`
   .dropdown:hover .dropdown-content {
     display: block;
   }
-`
+}
