--- a/components/saint/ButtonAction/styles.module.scss
+++ b/components/saint/ButtonAction/styles.module.scss
@@ -1,6 +1,4 @@
-import styled from 'styled-components'
-
-export const Button = styled.button`
+.button {
   background-color: #d9d9d9;
   color: black;
   border: 1px solid #dee2e6;
@@ -22,9 +20,9 @@ export const Button = styled.button`
   &:hover {
     transform: scale(1.05);
   }
-`
+}
 
-export const Hamburger = styled.div`
+.hamburger {
   display: flex;
   flex-direction: column;
   gap: 2px;
@@ -35,4 +33,4 @@ export const Hamburger = styled.div`
     height: 2px;
     width: 100%;
   }
-`
+}
