--- a/components/saint/Quotes/styles.module.scss
+++ b/components/saint/Quotes/styles.module.scss
@@ -1,6 +1,4 @@
-import styled from 'styled-components'
-
-export const Quote = styled.div`
+.quote {
   flex: 1;
   border-radius: 5px;
   padding: 25px;
@@ -44,6 +42,4 @@ export const Quote = styled.div`
       color: #4b5658;
     }
   }
-`
-
-export const SlideContainer = styled.div``
+}
