--- a/components/saint/TextSection/styles.module.scss
+++ b/components/saint/TextSection/styles.module.scss
@@ -1,10 +1,8 @@
-import styled from 'styled-components'
-import { device } from '../../../styles/devices'
-import { colors } from '../../../styles/colors'
+// import styled from 'styled-components'
+// import { device } from '../../../styles/devices'
+// import { colors } from '../../../styles/colors'
 
-export const TextSection = styled.div<{
-  $readMore?: Boolean
-}>`
+.textSection {
   color: #0e0e0e;
   padding: 20px;
   margin-bottom: 60px;
@@ -15,12 +13,12 @@ export const TextSection = styled.div<{
     -7px 7px 14px #fff;
   border: 1px solid #dee2e6;
   transition: height 0.2s ease-in-out;
-  height: ${(props) =>
-    props?.$readMore ? 'auto' : '600px'};
+  // height: ${(props) =>
+  //   props?.$readMore ? 'auto' : '600px'};
 
-  @media ${device.laptop} {
-    padding: 10px 40px 20px 40px;
-  }
+  // @media ${device.laptop} {
+  //   padding: 10px 40px 20px 40px;
+  // }
 
   .summary {
     font-weight: 500;
@@ -81,4 +79,4 @@ export const TextSection = styled.div<{
       );
     }
   }
-`
+}
