--- a/components/books/TopAuthor/styles.module.scss
+++ b/components/books/TopAuthor/styles.module.scss
@@ -1,5 +1,4 @@
-// import { variables } from '../../../styles/colors'
-// import { device } from '../../../styles/devices'
+@import './../../../styles/breakpoints.scss';
 
 .topAuthor {
   display: flex;
