updated related saints for edge runtime

--- a/components/global/ImageGlobal/styles.module.scss
+++ b/components/global/ImageGlobal/styles.module.scss
@@ -7,5 +7,27 @@
     min-width: 100%;
     object-fit: cover;
     border-radius: 5px;
+    z-index: 2;
+  }
+
+  &.whiteBorder {
+    position: relative;
+    box-shadow: none;
+
+    img {
+      border-radius: 10px;
+    }
+
+    &::after {
+      content: '';
+      background-color: #fff;
+      height: 110%;
+      width: 110%;
+      top: -3.5%;
+      left: -5%;
+      position: absolute;
+      z-index: 0;
+      border-radius: 15px;
+    }
   }
 }
