--- a/components/saint/BentoSection/styles.module.scss
+++ b/components/saint/BentoSection/styles.module.scss
@@ -23,13 +23,13 @@
 
   .toc {
     background: linear-gradient(
-      246deg,
-      rgb(117 2 15) 0%,
+      200deg,
+      rgb(104, 18, 28) 0%,
+      rgb(0, 0, 0) 75%,
       rgb(0, 0, 0) 100%
     );
-    display: flex;
     align-items: flex-start;
-    font-size: 13px;
+    font-size: 14px;
     flex-direction: column;
     flex-wrap: wrap;
     color: #ffcaca;
@@ -43,9 +43,12 @@
       width: 35%;
     }
 
-    .list {
+    .content {
       padding: 20px;
-      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 100%;
 
       @include breakpoint(tablet) {
         padding: 20px 30px;
@@ -54,6 +57,10 @@
       @include breakpoint(laptop) {
         padding: 30px 40px;
       }
+    }
+
+    .list {
+      flex: 1;
 
       .item {
         margin-bottom: 5px;
@@ -65,8 +72,42 @@
 
       .dash {
         color: var(--gold);
-        font-size: 14px;
+        font-size: 16px;
         margin-right: 5px;
+      }
+
+      .h2 {
+        font-size: 14px;
+
+        @include breakpoint(laptop) {
+          font-size: 15px;
+        }
+      }
+    }
+
+    .image {
+      margin-bottom: 50px;
+      position: relative;
+      display: none;
+
+      @include breakpoint(tablet) {
+        display: block;
+      }
+
+      &::after {
+        content: '';
+        height: 100%;
+        width: 200px;
+        display: block;
+        top: 0;
+        position: absolute;
+        z-index: 2;
+
+        background: radial-gradient(
+          circle,
+          rgba(255, 255, 255, 0) 0%,
+          rgba(0, 0, 0, 1) 95%
+        );
       }
     }
   }
@@ -99,7 +140,7 @@
       .preview {
         width: 100%;
         display: -webkit-box;
-        -webkit-line-clamp: 10;
+        -webkit-line-clamp: 20;
         -webkit-box-orient: vertical;
         overflow: hidden;
         flex: 1;
@@ -155,7 +196,7 @@
     }
 
     @include breakpoint(laptop) {
-      padding: 0 40px 20px 40px;
+      padding: 0 40px 30px 40px;
     }
   }
 
