--- a/components/saint/ImageMain/styles.module.scss
+++ b/components/saint/ImageMain/styles.module.scss
@@ -1,24 +1,14 @@
-// import styled from 'styled-components'
-// import { device } from '../../../styles/devices'
-// import { colors } from '../../../styles/colors'
+@import './../../../styles/breakpoints.scss';
 
 .imageContainer {
+  margin: 0 auto;
+
+  @include breakpoint(tablet) {
+    margin: unset;
+  }
+
   .image-global {
     position: relative;
-
-    &:before {
-      content: '';
-      position: absolute;
-      top: -1.5%;
-      bottom: 0;
-      left: -2.5%;
-      right: 0;
-      width: 105%;
-      height: 105%;
-      background-color: #fff;
-      z-index: 0;
-      border-radius: 14px;
-    }
 
     img {
       object-fit: cover;
