--- a/components/saint/BentoSection/styles.module.scss
+++ b/components/saint/BentoSection/styles.module.scss
@@ -48,6 +48,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      align-items: flex-start;
       height: 100%;
 
       @include breakpoint(tablet) {
@@ -56,6 +57,10 @@
 
       @include breakpoint(laptop) {
         padding: 30px 40px;
+      }
+
+      svg {
+        margin-bottom: 40px;
       }
     }
 
@@ -72,42 +77,12 @@
 
       .dash {
         color: var(--gold);
-        font-size: 16px;
+        font-size: 14px;
         margin-right: 5px;
       }
 
       .h2 {
         font-size: 14px;
-
-        @include breakpoint(laptop) {
-          font-size: 15px;
-        }
-      }
-    }
-
-    .image {
-      margin-bottom: 50px;
-      position: relative;
-      display: none;
-
-      @include breakpoint(tablet) {
-        display: block;
-      }
-
-      &::after {
-        content: '';
-        height: 100%;
-        width: 200px;
-        display: block;
-        top: 0;
-        position: absolute;
-        z-index: 2;
-
-        background: radial-gradient(
-          circle,
-          rgba(255, 255, 255, 0) 0%,
-          rgba(0, 0, 0, 1) 95%
-        );
       }
     }
   }
