--- a/components/saint/TableOfContentsFeatures/styles.module.scss
+++ b/components/saint/TableOfContentsFeatures/styles.module.scss
@@ -1,14 +1,7 @@
-.stickyContainer {
-  position: relative;
-  height: calc(100% - 300px);
-}
-
 .TableOfContentsFeatures {
   list-style-type: none;
-  margin: 0;
+  margin: 0 0 80px 0;
   padding: 0;
-  position: sticky;
-  top: 100px;
 
   li {
     &.active {
