--- a/components/home/Filter/styles.module.scss
+++ b/components/home/Filter/styles.module.scss
@@ -1,8 +1,12 @@
 @import './../../../styles/breakpoints.scss';
+$color: rgb(49, 45, 76);
 
 .filter {
   .instructions {
-    color: #dadada;
+    color: rgb(233, 230, 253);
+    text-shadow: -1px 0 $color, 0 1px $color, 1px 0 $color, 0 -1px $color;
+    font-weight: 600;
+    letter-spacing: 0.25px;
     font-size: 12px;
     text-align: left;
   }
