--- a/components/home/Toggle/styles.module.scss
+++ b/components/home/Toggle/styles.module.scss
@@ -3,7 +3,8 @@
 .sortToggle {
   position: absolute;
   bottom: -50px;
-  left: calc((100% - 230px) / 2);
+  left: calc((100% - 195px) / 2);
+  cursor: pointer;
 
   .selected {
     font-size: 14px;
@@ -11,10 +12,12 @@
     background-color: #2f4f3a;
     padding: 10px 30px;
     color: #dadada;
-    cursor: pointer;
+    transition: all 0.2s ease-in-out;
     border-radius: 5px;
     font-weight: 300;
     border: 1px solid #676767;
+    cursor: pointer;
+   //
 
     .direction {
       text-decoration: underline;
@@ -25,15 +28,19 @@
     position: absolute;
     top: 40px;
     right: 0;
-    width: 225px;
+    width:  184px;
     background-color: lavender;
     border-radius: 5px;
-    display: none;
+    opacity: 0;
+    box-sizing: border-box;
+    pointer-events: none;
+    transition: all 0.2s ease-in-out;
     z-index: 2;
-    box-shadow: -2px 4px 10px 0px #121023;
+    box-shadow: -2px 4px 10px 0px rgb(143, 142, 147);
 
     &.visible {
-      display: block;
+      opacity: 1;
+      pointer-events:all;
     }
 
     ul {
@@ -44,14 +51,15 @@
 
       li {
         padding: 5px 20px;
+        font-weight: 500;
         width: max-content;
         margin: 0;
         width: 100%;
-        cursor: pointer;
         color: #333;
 
         &:hover {
           background-color: #999;
+           cursor: pointer;
         }
       }
     }
