--- a/components/page/Header/styles.module.scss
+++ b/components/page/Header/styles.module.scss
@@ -70,7 +70,7 @@
         rgba(0, 0, 0, 0),
         rgba(0, 0, 0, 0.5)
       ),
-      url('/footer.webp');
+      url('/bg-light.webp');
     background-size: cover; /* This will cover the entire viewport */
     background-repeat: no-repeat; /* Important if the image is smaller than the footer */
     background-position: center 40%; /* This will center the image */
