--- a/components/saint/NameTag/styles.module.scss
+++ b/components/saint/NameTag/styles.module.scss
@@ -2,6 +2,15 @@
 
 .nameTag {
   margin-bottom: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-direction: column;
+
+  @include breakpoint(tablet) {
+    flex-direction: row;
+    align-items: center;
+  }
 
   .name {
     font-size: 24px;
@@ -19,6 +28,11 @@
     display: flex;
     align-items: center;
     gap: 5px;
+    margin-bottom: 15px;
+
+    @include breakpoint(tablet) {
+      margin-bottom: 0;
+    }
 
     p {
       font-size: 14px;
@@ -39,6 +53,41 @@
       color: #54846d;
       font-weight: 600;
       min-width: fit-content;
+    }
+  }
+
+  .feastDay {
+    background-color: red;
+    color: yellow;
+    height: 80px;
+    width: 80px;
+    min-width: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+    gap: 3px;
+    flex-direction: column;
+    // padding-left: 17px;
+
+    .row {
+      display: flex;
+      align-items: center;
+      gap: 3px;
+    }
+
+    .day {
+      font-size: 20px;
+      font-weight: 700;
+      line-height: 1;
+    }
+
+    .month {
+      font-size: 20px;
+      font-weight: 700;
+      line-height: 1;
+      text-transform: uppercase;
+      margin-bottom: 5px;
     }
   }
 }
