--- a/components/home/Toggle/styles.module.scss
+++ b/components/home/Toggle/styles.module.scss
@@ -2,8 +2,8 @@
 
 .sortToggle {
   position: absolute;
-  bottom: -50px;
-  left: calc((100% - 195px) / 2);
+  bottom: -60px;
+  left: calc((100% - 215px) / 2);
   cursor: pointer;
 
   .selected {
@@ -17,7 +17,9 @@
     font-weight: 300;
     border: 1px solid #676767;
     cursor: pointer;
-   //
+    gap: 10px;
+    display: flex;
+    align-items: center;
 
     .direction {
       text-decoration: underline;
@@ -26,9 +28,9 @@
 
   .dropdown {
     position: absolute;
-    top: 40px;
+    top: 50px;
     right: 0;
-    width:  184px;
+    width:  215px;
     background-color: lavender;
     border-radius: 5px;
     opacity: 0;
