--- a/components/saint/Books/styles.module.scss
+++ b/components/saint/Books/styles.module.scss
@@ -37,10 +37,6 @@
     justify-content: flex-start;
     height: 100%;
 
-    @include breakpoint(tablet) {
-      padding-right: 30px;
-    }
-
     .bookName {
       font-size: 16px;
       font-weight: 600;
@@ -134,7 +130,7 @@
 }
 
 .inRightRail.books {
-  padding: 0;
+  padding: 10px 0 0 0;
   margin: 0;
 
   .booksContainer {
