--- a/pages/saints/[slug]/styles.module.scss
+++ b/pages/saints/[slug]/styles.module.scss
@@ -34,6 +34,8 @@
       }
 
       .heroText {
+        width: 100%;
+
         @include breakpoint(tablet) {
           margin-top: 150px;
         }
@@ -169,7 +171,7 @@
 
     .rightRail {
       width: 200px;
-      margin-top: 200px;
+      margin-top: 150px;
       display: none;
 
       @include breakpoint(laptop) {
