--- a/components/page/Header/styles.module.scss
+++ b/components/page/Header/styles.module.scss
@@ -38,7 +38,8 @@
 }
 
 .navigation {
-  gap: 10px;
+  gap: 20px;
+  display: flex;
 
   a {
     color: #000;
@@ -48,6 +49,15 @@
     letter-spacing: 0.5px;
     transition: all 0.2s ease-in-out;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+
+    .count {
+      font-size: 24px;
+      font-weight: 700;
+      color: var(--gold);
+    }
 
     &:hover {
       color: #999;
