--- a/components/saint/SectionTitle/styles.module.scss
+++ b/components/saint/SectionTitle/styles.module.scss
@@ -10,8 +10,8 @@
     font-size: 20px;
     background-image: linear-gradient(
       90deg,
-      rgba(36, 30, 78, 1) 0%,
-      rgba(204, 173, 0, 1) 100%
+      var(--violet),
+      #48455f
     );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
