--- a/components/books/BookSummary/styles.module.scss
+++ b/components/books/BookSummary/styles.module.scss
@@ -1,121 +1,152 @@
 @import './../../../styles/breakpoints.scss';
 
 .bookSummary {
-  width: 100%;
-  border: 1px solid transparent;
+  display: flex;
+  border-radius: 10px;
+  margin: 10px;
+  transition: all 0.2s ease-in-out;
+  position: relative;
+  background-color: #fff;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding-bottom: 5px;
+  min-width: 180px;
 
-  .col {
+  .bookCover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 90%;
-    margin: 30px auto;
+    margin-bottom: 0.5rem;
 
     @include breakpoint(tablet) {
-      margin: 0 0 0 30px;
-      width: 90%;
+      align-items: flex-start;
     }
 
-    &.col-1 {
-      @include breakpoint(tablet) {
-        margin-right: 50px;
-        position: relative;
-        top: -70px;
+    .image {
+      width: 175px;
+      min-height: 275px;
+      max-height: 275px;
+      margin-bottom: 10px;
+      display: flex;
+      justify-content: center;
+
+      a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: -5px 2px 10px 3px rgba(0, 0, 0, 0.2);
+        border-radius: 5px;
       }
     }
   }
 
-  .image {
-    margin-bottom: 30px;
-    border-radius: 5px;
-    overflow: hidden;
-    box-shadow: -5px 2px 10px 3px rgba(0, 0, 0, 0.2);
-  }
-
-  .book-link {
-    background-color: #333;
-    color: #fff;
-    font-weight: 500;
-    border: none;
-    border-radius: 20px;
-    padding: 8px 20px;
-    width: 250px;
-    box-shadow: -5px 2px 10px 3px rgba(0, 0, 0, 0.2);
-  }
-
-  .content {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    border-radius: 5px;
-    background-color: #fff;
-    padding: 20px;
-    border: 1px solid #e2e2e2;
+  .bookInfo {
     display: flex;
     flex-direction: column;
-    position: relative;
+    justify-content: space-between;
+  }
 
-    @include breakpoint(tablet) {
-      margin-top: 50px;
-      flex-direction: row;
-      padding: 40px 50px 20px 20px;
-    }
+  .titleContainer {
+    height: 125px;
+    width: 175px;
 
     .title {
       font-size: 1.1rem;
       line-height: 1.2;
-      color: #555;
-      font-weight: 500;
+      color: rgb(98, 25, 25);
+      font-weight: 700;
       margin-top: 0px;
-      margin-bottom: 5px;
+      margin-bottom: 10px;
       text-align: center;
+
+      display: -webkit-box;
+      -webkit-line-clamp: 4;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
 
       @include breakpoint(tablet) {
         text-align: left;
       }
+    }
+  }
+
+  .genre {
+    padding: 2px 12px;
+    background-color: #ccebd9;
+    font-size: 10px;
+    font-weight: 500;
+    border-radius: 5px;
+    color: #54846d;
+    font-weight: 600;
+    width: fit-content;
+    margin-bottom: 0.5rem;
+  }
+
+  .authorContainer {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    height: 40px;
+    margin-bottom: 0.5rem;
+
+    .profile {
+      height: 35px;
+      width: 35px;
+      min-width: 35px;
+      border-radius: 50%;
+      overflow: hidden;
+      border: 1px solid var(--gold);
     }
 
     .author {
       font-size: 0.9rem;
-      color: #555;
+      color: #222;
+      line-height: 1.1;
       font-weight: 400;
-      margin-bottom: 10px;
-      text-align: center;
-
-      @include breakpoint(tablet) {
-        text-align: left;
-      }
+      font-weight: 600;
     }
+  }
+
+  .descriptionContainer {
+    min-height: 180px;
 
     .description {
-      font-size: 0.9rem;
-      color: #999;
-      margin-top: 0.5rem;
+      font-size: 13px;
+      font-weight: 500;
+      line-height: 1.25;
+      color: #333;
+      margin-bottom: 1rem;
+      display: -webkit-box;
+      -webkit-line-clamp: 10;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
     }
+  }
 
-    .dots {
-      display: flex;
-      flex-direction: column;
-      gap: 3px;
-      position: absolute;
-      right: 15px;
-      top: 15px;
+  .updated {
+    font-size: 13px;
+    color: #666;
+    margin: 0;
+    padding: 0;
+  }
 
-      .dot {
-        height: 5px;
-        width: 5px;
-        border-radius: 50%;
+  .bookLink {
+    margin-top: 15px;
+    color: var(--violet);
+    font-weight: 500;
+    border: 1px solid #dcdada;
+    border-radius: 5px;
+    padding: 4px 15px;
+    width: max-content;
+    font-size: 12px;
+    width: 175px;
+    background-color: transparent;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
 
-        &:nth-child(1) {
-          background-color: #666666;
-        }
-        &:nth-child(2) {
-          background-color: #a3a3a3;
-        }
-        &:nth-child(3) {
-          background-color: #d5d5d5;
-        }
-      }
+    &:hover {
+      background-color: var(--gold);
     }
   }
 }
