--- a/components/saint/Books/styles.module.scss
+++ b/components/saint/Books/styles.module.scss
@@ -95,7 +95,6 @@
 
       @include breakpoint(tablet) {
         font-size: 14px;
-        padding: 5px 20px;
         border-radius: 15px;
       }
 
@@ -132,13 +131,14 @@
 .inRightRail.books {
   padding: 10px 0 0 0;
   margin: 0;
+  border-top: none;
 
   .booksContainer {
     gap: 40px;
   }
 
   .ctaBtn {
-    width: max-content;
+    width: 100%;
   }
 
   .book {
@@ -152,6 +152,7 @@
 
     .bookInfo {
       margin-top: 0;
+      width: 100%;
     }
 
     .bookDescription,
