--- a/components/saint/Summary/styles.module.scss
+++ b/components/saint/Summary/styles.module.scss
@@ -12,6 +12,7 @@
 
     li {
       margin-bottom: 10px;
+      padding-left: 10px;
       margin-left: 0;
       max-width: 800px;
       font-size: 16px;
