--- a/components/page/SMButtons/styles.module.scss
+++ b/components/page/SMButtons/styles.module.scss
@@ -3,6 +3,10 @@
   gap: 10px;
   margin-left: 20px;
 
+  a {
+    width: 30px;
+  }
+
   .button {
     display: flex;
     justify-content: center;
